# FPStracker

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: publish-package-managers.yml  quality.yml  release.yml  security.yml  smoke.yml
docs/: GAMES_DB.md  INSTALL.md  PUBLISH.md  RELEASE_CHECKLIST.md
scripts/: generate-package-manifests.sh  install.ps1  install.sh
src/: benchmark_runner.rs  config.rs  deps.rs  idempotency.rs  main.rs
src/api/: client.rs  mod.rs
src/api_routes/: mod.rs
src/benchmark/: live.rs  mod.rs  session.rs  submit.rs
src/benchmark/focus/: linux.rs  macos.rs  mod.rs  windows.rs
src/feedback/: cli.rs  mod.rs
src/games/: database.rs  mod.rs
src/hardware/: cpu.rs  gpu.rs  mod.rs  ram.rs  system.rs
src/import/: capframex.rs  common.rs  mangohud.rs  mod.rs
src/server/: mod.rs
src/storage/: mod.rs
src/tui/: animation.rs  input.rs  mod.rs  state.rs  theme.rs
src/tui/screens/: baseline.rs  consent.rs  error.rs  feedback.rs  game.rs  hardware.rs  home.rs  mod.rs  results.rs  review.rs
src/tui/widgets/: banner.rs  card.rs  footer.rs  game_card.rs  gauge.rs  header.rs  mod.rs  progress.rs
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: ContributeLayout.tsx
ui/src/components/feedback/: EmptyState.tsx  SuccessAnimation.tsx  index.ts
ui/src/components/layout/: Layout.tsx  TerminalLayout.tsx  index.ts
ui/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Skeleton.tsx  index.ts
ui/src/hooks/: useGameCatalog.ts  useHardwareDetection.ts
ui/src/lib/: idempotency.ts  resolution.ts  trackerStore.ts  uuid.ts
ui/src/pages/: BenchmarkPage.tsx  CompanionPage.tsx  DetectPage.tsx  FeedbackPage.tsx  GamePage.tsx  ImportPage.tsx  LandingPage.tsx  ReviewPage.tsx  SuccessPage.tsx  SyntheticPage.tsx  TermsPage.tsx
